--- a/index.html
+++ b/index.html
@@ -10,22 +10,14 @@
     <header class="header">
         <nav class="header__menu">
             <a class="header__menu__link" href="index.html">Home</a>
-            <a class="header__menu__link" href="about.html">Sobre mí</a>
+            <a class="header__menu__link" href="#">Estadisticas</a>
+            <a class="header__menu__link" href="#">MoneyLine</a>
+            <a class="header__menu__link" href="#">Over/Under</a>
         </nav>
     </header>
     <main>
         
-        <div class="presentacion__enlaces">
-            <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes</h2>
-            <a class="presentacion__enlaces__link" href="https://github.com/">
-                <img src="#">
-                Github
-            </a>
-            <a class="presentacion__enlaces__link" href="#">
-                <img src="#">
-                Otra red
-            </a>
-        </div>
+        
     </main>
     <footer class="footer">
         <p>Desarrollado por Equipo #3</p>
